<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/p_dynamic_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="61.0dip"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@id/llayout_pbc_1_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/week_bg_select"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5.0dip"
                    android:text="@string/p_baby_class_txtv_title_week_1_string"
                    android:textColor="@color/public_white_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2.0dip"
                    android:text="@string/p_baby_class_txtv_title_date_string"
                    android:textColor="@color/p_class_top_date_txtv_E3FF8E_color"
                    android:textSize="@dimen/login_txt_show_11_dimes" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/llayout_pbc_2_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/week_bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5.0dip"
                    android:text="@string/p_baby_class_txtv_title_week_2_string"
                    android:textColor="@color/public_white_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2.0dip"
                    android:text="@string/p_baby_class_txtv_title_date_string"
                    android:textColor="@color/p_class_top_date_txtv_E3FF8E_color"
                    android:textSize="@dimen/login_txt_show_11_dimes" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/llayout_pbc_3_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/week_bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5.0dip"
                    android:text="@string/p_baby_class_txtv_title_week_3_string"
                    android:textColor="@color/public_white_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2.0dip"
                    android:text="@string/p_baby_class_txtv_title_date_string"
                    android:textColor="@color/p_class_top_date_txtv_E3FF8E_color"
                    android:textSize="@dimen/login_txt_show_11_dimes" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/llayout_pbc_4_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/week_bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5.0dip"
                    android:text="@string/p_baby_class_txtv_title_week_4_string"
                    android:textColor="@color/public_white_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2.0dip"
                    android:text="@string/p_baby_class_txtv_title_date_string"
                    android:textColor="@color/p_class_top_date_txtv_E3FF8E_color"
                    android:textSize="@dimen/login_txt_show_11_dimes" />
            </LinearLayout>

            <LinearLayout
                android:id="@id/llayout_pbc_5_id"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:background="@drawable/week_bg"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="5.0dip"
                    android:text="@string/p_baby_class_txtv_title_week_5_string"
                    android:textColor="@color/public_white_color"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="2.0dip"
                    android:text="@string/p_baby_class_txtv_title_date_string"
                    android:textColor="@color/p_class_top_date_txtv_E3FF8E_color"
                    android:textSize="@dimen/login_txt_show_11_dimes" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@id/gallery_infor_id"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <android.support.v4.view.ViewPager
                android:id="@id/viewpage_pbc_guidePages"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" />

            <LinearLayout
                android:id="@id/layout_vp_pbc_viewGroup"
                android:layout_width="fill_parent"
                android:layout_height="15.0dip"
                android:layout_gravity="bottom"
                android:layout_marginBottom="3.0dip"
                android:gravity="center"
                android:orientation="horizontal" />
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@id/rlayout_top_id"
        android:layout_width="fill_parent"
        android:layout_height="64.0dip"
        android:background="@drawable/p_class_top_bg" >

        <Button
            android:id="@id/btn_p_class_back_id"
            android:layout_width="80.0dip"
            android:layout_height="40.0dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="9.0dip"
            android:layout_marginRight="9.0dip"
            android:background="@drawable/btn_back_selector" />

        <TextView
            android:layout_width="160.0dip"
            android:layout_height="34.0dip"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="70.0dip"
            android:layout_marginTop="9.0dip"
            android:gravity="right|center"
            android:paddingLeft="3.0dip"
            android:shadowColor="@color/public_black_color"
            android:shadowDx="1.0"
            android:shadowRadius="2.0"
            android:text="@string/p_top_title_class_string"
            android:textColor="@color/public_white_color"
            android:textSize="@dimen/t_main_top_txtv_28_dimens"
            android:textStyle="bold" />
    </RelativeLayout>

</RelativeLayout>